@@ -8,6 +8,8 @@ v0.9.2 (WIP):
         Deleting node queue connected links for deletion.
 
     BUGFIX: Examples: Simplify and fix drawing of node header line (#180)
+    
+    BUGFIX: Editor: Cleanup tabs.
 
 
 v0.9.1 (2022-08-27):
